# NathanielF.github.io

./: .RData  .Rhistory  .gitignore  _quarto.yml  blog.qmd  custom.scss  environment.yml  index.qmd  opensource.qmd  pyproject.toml  script.js  talks.qmd
deprecated/Bayesian_AB_tests/: bayesian_ab_tests.qmd
deprecated/Bayesian_Trial_Design/: bayesian_trial_design.ipynb  bayesian_trial_design.qmd  bayesian_trial_design.quarto_ipynb
deprecated/DiD-Card-Kreuger/: DID.ipynb  DID.quarto_ipynb
deprecated/Survey_Analytics_Design/: .RData  .Rhistory  Survey_Analytics_Design.Rproj  Survey_analysis.ipynb  Survey_analysis.qmd  agstrat_py.csv  nhanes_py.csv
deprecated/blaavan_sem/: .RData  .Rhistory  basic_blavaan.R  building_sem_stan.R  stan_sem_politics.stan
deprecated/discrete_choice_mlogit/: .RData  .Rhistory  mlogit.nb.html  mlogit.qmd
deprecated/non_parametric_bayes/: dirichlet_mixtures.ipynb  dirichlet_mixtures.qmd  dirichlet_mixtures.quarto_ipynb
deprecated/occams_razor/: wheat_from_chaff.ipynb  wheat_from_chaff.qmd
deprecated/ordered_logit/: ordered_logit.qmd
deprecated/pooling_experiments/: pooling_experiments.qmd
deprecated/pricing/: pricing_a_potted_history.qmd
deprecated/state_space/: statespace_models.quarto_ipynb
docs/: archive.html  blog.html  index.html  listings.json  opensource.html  search.json  styles.css  talks.html
docs/notes/: Uncertain Things.html
docs/scratchwork/: bayesian_sem.html  model_uncertainty.html
notes/: Uncertain Things.md
notes/Logic/: Introduction - Logic Topics.md
posts/: _metadata.yml
talks/: first_talk.qmd
(+198 files in other folders)
