[tool.poetry]
name = "examined-algorithms"
version = "0.1.0"
description = "A blog site for Nathaniel Forde"
authors = ["Nathaniel <NathanielF@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.5.3"
pymc = "^5.7.0"
jupyter = "1.0.0"
ipykernel = "6.0.0"
statsmodels = "^0.13.5"
bambi = "^0.10.0"
linearmodels = "^4.27"
stargazer = "^0.0.5"
numpyro = "^0.13.0"
jax = "^0.4.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
